# TrodesNetwork

./: .gitignore  CMakeLists.txt  README.md  TrodesNetwork.pro
TrodesNetworkSource/: README.md
TrodesNetworkSource/src/libTrodesNetwork/: CMakeLists.txt
TrodesNetworkSource/src/libTrodesNetwork/include/libTrodesNetwork/: AbstractModuleClient.h
TrodesNetworkSource/src/libTrodesNetwork/src/: AbstractModuleClient.cpp  networkDataTypes.cpp
TrodesNetworkSource/src/zmq/lib/pkgconfig/: libczmq.pc  libmlm.pc
TrodesNetworkSource/test/: network_test.cpp
cmake/: Findczmq.cmake  Findlibzmq.cmake  Findmalamute.cmake  Toolchain-mingw32.cmake
doc/: CMakeLists.txt  Doxyfile.in  main.dox
how-to-export-cpp-library/: CMakeLists.txt  README.md
how-to-export-cpp-library/src/: CMakeLists.txt
how-to-export-cpp-library/src/ExeExample/: CMakeLists.txt  main.cpp
how-to-export-cpp-library/src/libTrodesNetwork/: CMakeLists.txt
how-to-export-cpp-library/src/libTrodesNetwork/include/libTrodesNetwork/: networkincludes.h  trodesmsg.h
how-to-export-cpp-library/src/libTrodesNetwork/src/: CZHelp.cpp  highfreqclasses.cpp  trodesglobaltypes.cpp  trodesmsg.cpp
how-to-export-cpp-library/src/libTrodesNetwork/zmq/lib/: libczmq.so.4  libczmq.so.4.1.1  libmlm.so.1.0.1
how-to-export-cpp-library/src/pythonPackaging/: CMakeLists.txt  README  setup.py
how-to-export-cpp-library/src/pythonPackaging/src/: trodesnetworkpython.cpp
how-to-export-cpp-library/src/zmq/lib/: libzmq.so.5  libzmq.so.5.1.4
src/: CMakeLists.txt  README  trodesnetwork_build_defaults.pri
src/libTrodesNetwork/: CMakeLists.txt  LFP_Camera_Data.cpp  libTrodesNetwork.pro
src/libTrodesNetwork/include/libTrodesNetwork/: AbstractModuleClient.h  CZHelp.h  highfreqclasses.h  networkDataTypes.h  networkincludes.h  trodesglobaltypes.h  trodesmsg.h
src/libTrodesNetwork/src/: AbstractModuleClient.cpp  CZHelp.cpp  highfreqclasses.cpp  networkDataTypes.cpp  networkincludes.cpp  trodesglobaltypes.cpp  trodesmsg.cpp
src/libTrodesNetwork_C/: CMakeLists.txt
src/libTrodesNetwork_C/src/: trodesnetwork_c.cpp  trodesnetwork_c.h
src/pythonPackaging/: CMakeLists.txt  basicpymoduleclient.py  pythonPackaging.pro  rmsplot.py  setup.py  testnetwork.py
src/pythonPackaging/boost/msvc64/lib/: libboost_numpy3-vc140-mt-1_65_1.lib
src/pythonPackaging/src/: trodesnetworkpython.cpp
src/zmq/lib/: libmlm.so.1
src/zmq/lib/pkgconfig/: libzmq.pc
src/zmq/lib/static/: libczmq.la  libmlm.la  libzmq.la
src/zmq/msvc64/ZeroMQ/CMake/: ZeroMQTargets-release.cmake
src/zmq/msvc64/ZeroMQ/lib/: libzmq-v140-mt-4_3_1.lib
src/zmq/msvc64/ZeroMQ/lib/pkgconfig/: libzmq.pc
src/zmq/msvc64/czmq/lib/: czmq.lib
src/zmq/msvc64/czmq/lib/pkgconfig/: libczmq.pc
src/zmq/msvc64/malamute/lib/: libmlm.lib  mlm.lib
src/zmq/msvc64/malamute/lib/pkgconfig/: libmlm.pc
test/: CMakeLists.txt  capitest.c
